--- a/public/index.html
+++ b/public/index.html
@@ -68,148 +68,191 @@
       </ul>
     </nav>
 
-    <section class="bg-light">
-      <div class="container">
-        <h2 class="text-center">About</h2>
-        <hr class="underline" />
-        <div class="split">
-          <div>
-            <p class="text-justify">
-              The
-              <b><abbr title="UEFA Champions League" tabindex="0">UCL</abbr></b>
-              is an annual club football competition organised by the
-              <span class="semi-bold"
-                ><i>Union of European Football Associations (UEFA)</i></span
-              >
-              and contested by top-division European clubs, deciding the
-              competition winners through a round robin group stage to qualify
-              for a double-legged knockout format, and a single leg final.
-            </p>
-          </div>
-          <div>
-            <p class="text-justify">
-              It is one of the most prestigious football tournaments in the
-              world and
-              <span class="bold"
-                >the most prestigious club competition in European
-                football</span
-              >, played by the national league champions (and, for some nations,
-              one or more runners-up) of their national associations.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <div class="slideshow-container">
-      <!--Slide 1-->
-      <div class="mySlides fade">
-        <div class="numbertext">1 / 4</div>
-        <video class="slideshow_item" autoplay playsinline muted loop>
-          <source
-            src="https://uclbranding.uefa.com/assets/video/starball-loop.mp4"
-            type="video/mp4"
-          />
-        </video>
-        <div class="slideshow_image-caption"></div>
-      </div>
-
-      <!--Slide 2-->
-      <div class="mySlides fade">
-        <div class="numbertext">2 / 4</div>
-        <img class="slideshow_item" src="images/CR7.jpg" alt="" />
-        <div class="slideshow_item-caption">Cristiano Ronaldo bicycle kick</div>
-      </div>
-
-      <!--Slide 3-->
-      <div class="mySlides fade">
-        <div class="numbertext">3 / 4</div>
-        <img class="slideshow_item" src="images/Messi.jpg" alt="" />
-        <div class="slideshow_item-caption">Lionel Messi</div>
-      </div>
-
-      <!--Slide 4-->
-      <div class="mySlides fade">
-        <div class="numbertext">4 / 4</div>
-        <img class="slideshow_item" src="images/Liverpool-winner.jpg" alt="" />
-        <div class="slideshow_item-caption">UCL Champions of 2018/19</div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-
-    <div class="slideshow-nav">
-      <span class="nav-dot" onclick="currentSlide(1)"></span>
-      <span class="nav-dot" onclick="currentSlide(2)"></span>
-      <span class="nav-dot" onclick="currentSlide(3)"></span>
-      <span class="nav-dot" onclick="currentSlide(4)"></span>
-    </div>
-
-    <section class="bg-dark">
-      <div class="container">
-        <h2 class="text-center">UCL Anthem</h2> <!--TODO:markup of text with quote etc.-->
-        <hr class="underline" />
-        <div class="split">
-          <div>
-            <p class="text-justify">
-              The UEFA Champions League Anthem, officially titled simply
-              "Champions League", is the official anthem of the UEFA Men's
-              Champions League, written by English composer Tony Britten in
-              1992, and based on George Frideric Handel's Zadok the Priest. It
-              was also the official anthem of the UEFA Women's Champions League
-              from its creation in 2001 to the 2021 creation of an independent
-              anthem. The complete anthem is about three minutes long, and has
-              two short verses and the chorus. The lyrics are in UEFA's three
-              official languages: English, French, and German.
-            </p>
-          </div>
-          <div>
-            <p class="text-justify">
-              The chorus is set to the exclamations "Die Meister! Die Besten!
-              Les grandes équipes! The champions!". The anthem is played inside
-              the stadium before the start of each UEFA Champions League match,
-              in addition to the beginning and end of television broadcasts of
-              the games. Special vocal versions of the anthem have been
-              performed live at the UEFA Champions League Final. UEFA's official
-              website states, "the anthem is now almost as iconic as the
-              trophy."
-            </p>
+    <!--General-->
+    <article>
+      <section class="bg-light">
+        <div class="container">
+          <h2 class="text-center">About</h2>
+          <hr class="underline" />
+          <div class="split">
+            <div>
+              <p class="text-justify">
+                The
+                <b><abbr title="UEFA Champions League" tabindex="0">UCL</abbr></b>
+                is an annual club football competition organised by the
+                <span class="semi-bold"
+                  ><i>Union of European Football Associations (UEFA)</i></span
+                >
+                and contested by top-division European clubs, deciding the
+                competition winners through a round robin group stage to qualify
+                for a double-legged knockout format, and a single leg final.
+              </p>
+            </div>
+            <div>
+              <p class="text-justify">
+                It is one of the most prestigious football tournaments in the
+                world and
+                <span class="bold"
+                  >the most prestigious club competition in European
+                  football</span
+                >, played by the national league champions (and, for some nations,
+                one or more runners-up) of their national associations.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="split">
-          <div class="container_split-audio">
-            <audio
-              class="ucl_anthem"
-              src="https://upload.wikimedia.org/wikipedia/en/2/2d/Champions_League_anthem.ogg"
-              controls
+      </section>
+      <div class="slideshow-container">
+        <!--Slide 1-->
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 4</div>
+          <video class="slideshow_item" autoplay playsinline muted loop>
+            <source
+              src="https://uclbranding.uefa.com/assets/video/starball-loop.mp4"
+              type="video/mp4"
             />
-          </div>
-          <div>
-            <img src="./images/championsleague2.jpg" alt="UCL Theme" />
-          </div>
+          </video>
+          <div class="slideshow_image-caption"></div>
         </div>
+        <!--Slide 2-->
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 4</div>
+          <img class="slideshow_item" src="images/CR7.jpg" alt="" />
+          <div class="slideshow_item-caption">Cristiano Ronaldo bicycle kick</div>
+        </div>
+        <!--Slide 3-->
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 4</div>
+          <img class="slideshow_item" src="images/Messi.jpg" alt="" />
+          <div class="slideshow_item-caption">Lionel Messi</div>
+        </div>
+        <!--Slide 4-->
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 4</div>
+          <img class="slideshow_item" src="images/Liverpool-winner.jpg" alt="" />
+          <div class="slideshow_item-caption">UCL Champions of 2018/19</div>
+        </div>
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
       </div>
-    </section>
+      <div class="slideshow-nav">
+        <span class="nav-dot" onclick="currentSlide(1)"></span>
+        <span class="nav-dot" onclick="currentSlide(2)"></span>
+        <span class="nav-dot" onclick="currentSlide(3)"></span>
+        <span class="nav-dot" onclick="currentSlide(4)"></span>
+      </div>
+    </article>
 
-    <section>
-      <div class="container">
-        <div class="split">
-          <div>
-            <img src="./images/trophy.jpg" alt="UCL Trophy" />
-          </div>
-          <div>
-            <h2>Trophy</h2>
-            <hr />
-            <p class="text-justify">
-              The European Champion Clubs' Cup, also known as the European Cup, is a trophy awarded annually by UEFA to the football club that wins the UEFA Champions League. In its former form, the competition bore the same name as the Cup and was also known as the European Cup before being renamed from the 1992/93 season. Several physical trophies bore this name, as a club was allowed to keep the trophy after five wins or three consecutive victories and a new trophy had to be forged for the following season. The original European Cup trophy was donated by the French sports newspaper L'Équipe. In March 1967, this trophy was permanently awarded to Real Madrid. At that time, Real Madrid was the reigning champion and had won a total of six titles, including the first five competitions from 1956 to 1960, making Celtic the first club to win the trophy in its current form in 1967.
-            </p>
+    <!--Anthem-->
+    <article>
+      <section class="bg-dark">
+        <!--text-->
+        <div class="container">
+          <h2 class="text-center">UCL Anthem</h2>
+          <hr class="underline" />
+          <div class="split">
+            <div>
+              <p class="text-justify">
+                The UEFA Champions League Anthem, officially titled simply
+                <q class="bold">Champions League</q>, is the official anthem of the UEFA Men's Champions League, written by English composer Tony Britten in 1992, and based on George Frideric Handel's Zadok the Priest. It was also the official anthem of the UEFA Women's Champions League from its creation in 2001 to the 2021 creation of an independent anthem. The complete anthem is about three minutes long, and has two short verses and the chorus. The lyrics are in UEFA's three official languages: English, French, and German.
+              </p>
+            </div>
+            <div>
+              <p class="text-justify">
+                The chorus is set to the exclamations <q><i>Die Meister! Die Besten! Les grandes équipes! The champions!</i></q>. The anthem is played insidethe stadium before the start of each UEFA Champions League match, in addition to the beginning and end of television broadcasts of the games. Special vocal versions of the anthem have been performed live at the UEFA Champions League Final. UEFA's official website states, <q class="semi-bold">the anthem is now almost as iconic as the trophy.</q>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+        <!--audio-->
+        <div class="container">
+          <div class="split">
+            <div class="container_split-audio">
+              <audio
+                class="ucl_anthem"
+                src="https://upload.wikimedia.org/wikipedia/en/2/2d/Champions_League_anthem.ogg"
+                controls
+              />
+            </div>
+            <div>
+              <img src="./images/championsleague2.jpg" alt="UCL Theme" />
+            </div>
+          </div>
+        </div>
+        <!--quotes-->
+        <div class="container">
+            <div class="quotes">
+              <div class="quote">
+                  <q class="text-justify">
+                    It's actually pretty nice when you walk out onto the pitch and you listen to it. You then know it’s a different match. It reminds you how special and important this competition is
+                  </q>
+                  <h2>Lionel Messi</h2>
+              </div>
+              <div class="quote">
+                  <q class="text-justify">
+                    It’s always emotional to hear the Champions League anthem
+                  </q>
+                  <h2>Gianluigi Buffon</h2>
+              </div>
+              <div class="quote">
+                  <q class="text-justify">
+                    There's nothing else like it, hairs on the back of your neck time..
+                  </q>
+                  <h2>Gareth Bale</h2>
+              </div>
+            </div>
+        </div>
+        <!--embeded twitter-content-->
+        <div class="container">
+          <div class="wrapper-tweet">
+            <blockquote class="twitter-tweet" data-lang="en" data-theme="light">
+              <p lang="fr" dir="ltr">😍
+                <a href="https://twitter.com/hashtag/UCL?src=hash&amp;ref_src=twsrc%5Etfw">#UCL</a> anthem time!
+                <br>
+                <br>
+                🎶 𝘋𝘪𝘦 𝘔𝘦𝘪𝘴𝘵𝘦𝘳!
+                <br>𝘋𝘪𝘦 𝘉𝘦𝘴𝘵𝘦𝘯!
+                <br>𝘓𝘦𝘴 𝘨𝘳𝘢𝘯𝘥𝘦𝘴 é𝘲𝘶𝘪𝘱𝘦𝘴...<br>____ ____ 🎶
+                <a href="https://t.co/4eIbaiZb29">pic.twitter.com/4eIbaiZb29</a></p>&mdash; UEFA Champions League (@ChampionsLeague)
+                <a href="https://twitter.com/ChampionsLeague/status/1199386211233812481?ref_src=twsrc%5Etfw">November 26, 2019</a>
+              </blockquote> <script async crossorigin="anonymous" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+        </div>
+      </section>
+    </article>
+
+    <!--Trophy-->
+    <article>
+      <section>
+        <div class="container">
+          <div class="split split-trophy">
+            <div>
+              <img src="./images/trophy3.jpg" alt="UCL Trophy" />
+            </div>
+            <div>
+              <h2>Trophy</h2>
+              <hr />
+              <p class="text-justify">
+                The European Champion Clubs' Cup, also known as the European Cup,
+                is a trophy awarded annually by UEFA to the football club that
+                wins the UEFA Champions League. In its former form, the
+                competition bore the same name as the Cup and was also known as
+                the European Cup before being renamed from the 1992/93 season.
+                Several physical trophies bore this name, as a club was allowed to
+                keep the trophy after five wins or three consecutive victories and
+                a new trophy had to be forged for the following season. The
+                original European Cup trophy was donated by the French sports
+                newspaper L'Équipe. In March 1967, this trophy was permanently
+                awarded to Real Madrid. At that time, Real Madrid was the reigning
+                champion and had won a total of six titles, including the first
+                five competitions from 1956 to 1960, making Celtic the first club
+                to win the trophy in its current form in 1967.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </article>
 
     <button
       class="scrollTopBtn transparent-look"
@@ -220,13 +263,16 @@
       <div class="footer-content">
         <h3>Portfolio - Loris Schell</h3>
         <p>
-          Course: WI20C | Student-ID: 3779830
+          <span class="footer-highlighted">Course:</span> WI20C |
+          <span class="footer-highlighted">Student-ID:</span> 3779830
         </p>
       </div>
       <div class="footer-bottom">
-        <p>Copyright &copy;2021 Loris Schell. Designed by <span>Loris Schell</span></p>
+        <p>
+          Copyright &copy;2021 Loris Schell. Designed by
+          <code>Loris Schell</code>
+        </p>
       </div>
     </footer>
-    
   </body>
 </html>
