--- a/public/stats.html
+++ b/public/stats.html
@@ -52,11 +52,11 @@
       <div class="footer-content">
         <h3>Portfolio - Loris Schell</h3>
         <p>
-          Course: WI20C | Student-ID: 3779830
+          <span class="footer-highlighted">Course:</span> WI20C | <span class="footer-highlighted">Student-ID:</span> 3779830
         </p>
       </div>
       <div class="footer-bottom">
-        <p>Copyright &copy;2021 Loris Schell. Designed by <span>Loris Schell</span></p>
+        <p>Copyright &copy;2021 Loris Schell. Designed by <code>Loris Schell</code></p>
       </div>
     </footer>
 
