stats.html grid finished

--- a/public/stats.html
+++ b/public/stats.html
@@ -6,6 +6,8 @@
     <title>Portfolio | UEFA Champions League</title>
 
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/stats.css" />
+
     <script src="js/main.js" defer></script>
   </head>
 
@@ -50,6 +52,262 @@
         </li>
       </ul>
     </nav>
+
+    <div class="content-wrapper">
+
+      <div class="content-header">
+        <h2>All-time stats</h2>
+      </div>
+      <div class="content-header">
+        <h3>Club stats</h3>
+        <hr>
+      </div>
+
+      <div class="container-club_titles">
+        <div class="card">
+          <div class="table_stats">
+            <h3>Most titles won</h3>
+            <ol>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Real Madrid</div>
+                  <div class="align-right"><span>13</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Milan</div>
+                  <div class="align-right"><span>7</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Liverpool</div>
+                  <div class="align-right"><span>6</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Bayern</div>
+                  <div class="align-right"><span>6</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Barcelona</div>
+                  <div class="align-right"><span>5</span></div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-club_wins">
+        <div class="card">
+          <div class="table_stats">
+            <h3>Most games won</h3>
+            <ol>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Real Madrid</div>
+                  <div class="align-right"><span>272</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Bayern</div>
+                  <div class="align-right"><span>219</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Barcelona</div>
+                  <div class="align-right"><span>195</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Man. United</div>
+                  <div class="align-right"><span>160</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Juventus</div>
+                  <div class="align-right"><span>151</span></div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-club_goals">
+        <div class="card">
+          <div class="table_stats">
+            <h3>Most goals scored</h3>
+            <ol>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Real Madrid</div>
+                  <div class="align-right"><span>1004</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Bayern</div>
+                  <div class="align-right"><span>770</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Barcelona</div>
+                  <div class="align-right"><span>655</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Man. United</div>
+                  <div class="align-right"><span>531</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Juventus</div>
+                  <div class="align-right"><span>468</span></div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="content-header margin-top">
+        <h3>Player stats</h3>
+        <hr>
+      </div>
+
+      <div class="container-most_matches">
+        <div class="card">
+          <div class="table_stats">
+            <h3>Most matches</h3>
+            <ol>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Ronaldo</div>
+                  <div class="align-right"><span>185</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Casillas</div>
+                  <div class="align-right"><span>181</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Xavi Hernandez</div>
+                  <div class="align-right"><span>157</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Messi</div>
+                  <div class="align-right"><span>153</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Giggs</div>
+                  <div class="align-right"><span>151</span></div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-top_goalscorer">
+        <div class="card">
+          <div class="table_stats">
+            <h3>Top goalscorer</h3>
+            <ol>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Ronaldo</div>
+                  <div class="align-right"><span>141</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Messi</div>
+                  <div class="align-right"><span>123</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Lewandowski</div>
+                  <div class="align-right"><span>82</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Benzema</div>
+                  <div class="align-right"><span>76</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Raul Gonzalez</div>
+                  <div class="align-right"><span>71</span></div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+
+      <div class="container-most_assists">
+        <div class="card">
+          <div class="table_stats">
+            <h3>Most assists</h3>
+            <ol>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Ronaldo</div>
+                  <div class="align-right"><span>42</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Messi</div>
+                  <div class="align-right"><span>36</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Di Maria</div>
+                  <div class="align-right"><span>34</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Giggs</div>
+                  <div class="align-right"><span>31</span></div>
+                </div>
+              </li>
+              <li>
+                <div class="list_item">
+                  <div class="align-left">Xavi Hernandez</div>
+                  <div class="align-right"><span>30</span></div>
+                </div>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>    
 
     <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
 
