--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
     <title>Portfolio | UEFA Champions League</title>
 
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/login.css" />
     <script src="js/main.js" defer></script>
   </head>
 
@@ -50,6 +51,10 @@
         </li>
       </ul>
     </nav>
+
+    <div class="content-wrapper">
+        <button class="btn info">Info</button>
+    </div>
 
     <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
 
