--- a/public/login.html
+++ b/public/login.html
@@ -105,7 +105,7 @@
               <div class="checkbox_box"></div>
               <span class="label-text">Remember Me</span>
             </label>
-            <button type="button" class="card-switch" onclick="switchForm()">I'm New Here</button>
+            <button type="button" class="card-switch" onclick="switchFormToSignUp()">I'm New Here</button>
           </div>
         </form>
 
@@ -179,7 +179,7 @@
           </div>
 
           <div class="form-bottom">
-            <button type="button" class="card-switch" onclick="switchForm()">Already have an account</button>
+            <button type="button" class="card-switch" onclick="switchFormToLogin()">Already have an account</button>
           </div>
         </form>
 
