type button to scrollUpButton added

--- a/public/history.html
+++ b/public/history.html
@@ -144,6 +144,7 @@
     <button
       class="scrollTopBtn transparent-look"
       aria-label="ScrollUp"
+      type="button"
     ></button>
 
     <footer class="bg-footer">
