--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       class="mobile-nav-toggle"
       aria-controls="primary-navigation"
       aria-expanded="false"
+      type="button"
     >
       <span class="sr-only">Menu</span>
     </button>
@@ -262,6 +263,7 @@
     <button
       class="scrollTopBtn transparent-look"
       aria-label="ScrollUp"
+      type="button"
     ></button>
 
     <footer class="bg-footer">
