--- a/public/stats.html
+++ b/public/stats.html
@@ -301,7 +301,7 @@
           </div>
         </div>
       </div>
-      <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
+      <button class="scrollTopBtn transparent-look" aria-label="ScrollUp" type="button"></button>
     </div>
 
     <footer class="bg-footer">
