--- a/public/table.html
+++ b/public/table.html
@@ -948,7 +948,7 @@
       </div>
     </div>
 
-    <button class="scrollTopBtn transparent-look" aria-label="ScrollUp"></button>
+    <button class="scrollTopBtn transparent-look" aria-label="ScrollUp" type="button"></button>
 
     <footer class="bg-footer">
       <div class="footer-content">
