--- a/public/login.html
+++ b/public/login.html
@@ -108,8 +108,8 @@
             <input type="text" name="email" placeholder="E-Mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required />
             <input type="password" name="password" placeholder="Password" required />
             <div class="actions">
-              <input type="submit" name="submit" value="Login" />
-              <input type="reset" name="" value="Reset"/>
+              <input type="submit" name="submit" value="Login"/>
+              <input type="reset" name="reset" value="Reset"/>
             </div>
           </div>
           
